# lever-framework

./: .gitignore  Cargo.toml  README.md
crates/lever_core/: Cargo.toml
crates/lever_core/src/: language_def.rs  lib.rs  lsp_mappings.rs  setup.rs  utils.rs
crates/lever_core/src/plugin_manager/: manager.rs  notification.rs
crates/lever_core/src/project/: mod.rs  workspace.rs
crates/lever_core/src/project/features/: completion.rs
crates/lever_core/src/project/features/diagnostics/: import_errors.rs  parse.rs  provider.rs
crates/lever_core/src/project/metadata/: ast_manager.rs  mod.rs  st_manager.rs
crates/lever_core/src/project/metadata/ast/: mod.rs  rules_translator.rs  tree.rs
crates/lever_gen/: Cargo.toml
crates/lever_gen/src/: lib.rs
src/: file.rs  language_def.rs  language_server.rs  lib.rs  utils.rs  workspace.rs
src/features/: completion.rs  hover.rs  mod.rs  rename.rs  semantic_tokens.rs
src/features/diagnostics/: import_errors.rs  parse.rs  provider.rs
src/metadata/: ast_manager.rs  mod.rs  st_manager.rs  symbol.rs  symbol_table.rs
src/metadata/ast/: mod.rs  rules_translator.rs  tree.rs
src/plugin_manager/: manager.rs
src/project/: file.rs  mod.rs  workspace.rs
src/project/features/: completion.rs  mod.rs  semantic_tokens.rs
src/project/features/diagnostics/: mod.rs  parse.rs  provider.rs
src/project/metadata/: ast_manager.rs  mod.rs  st_manager.rs  symbol.rs  symbol_table.rs
src/project/metadata/ast/: rules_translator.rs  tree.rs
