[package]
name = "lever_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = "4.5.0"
itertools = "0.11.0"
log = "0.4.19"
once_cell = "1.19.0"
petgraph = "0.6.4"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
simplelog = "0.12.1"
tokio = { version = "1.28.2", features = ["full"] }
tower-lsp = "0.19.0"
tree-sitter = "0.20.9"
