[package]
name = "lever_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lever_core = { path = "../lever_core" }
proc-macro2 = "1.0.79"

quote = "1.0.35"
ron = "0.8.1"
syn = "2.0.52"

[lib]
proc-macro = true
